plugins {
    id "org.springframework.boot" version "3.1.2"
    id "io.spring.dependency-management" version "1.1.3"
    id "java"
    id "jacoco"
    id "io.freefair.lombok" version "8.2.2"
}

group = "cricket.merstham.graphql"
sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

repositories {
    mavenCentral()
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

dependencies {
    developmentOnly "org.springframework.boot:spring-boot-devtools:${dependencyVersions.spring_boot}"
    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor:${dependencyVersions.spring_boot}"

    implementation "org.springframework.boot:spring-boot-starter-actuator:${dependencyVersions.spring_boot}"
    implementation "org.springframework.boot:spring-boot-starter-data-jpa:${dependencyVersions.spring_boot}"
    implementation 'org.postgresql:postgresql:42.5.1'
    implementation "org.springframework.boot:spring-boot-starter-graphql:${dependencyVersions.spring_boot}"
    implementation "org.springframework.boot:spring-boot-starter-security:${dependencyVersions.spring_boot}"
    implementation "org.springframework.boot:spring-boot-starter-oauth2-resource-server:${dependencyVersions.spring_boot}"
    implementation "org.springframework.boot:spring-boot-starter-validation:${dependencyVersions.spring_boot}"
    implementation "org.springframework.boot:spring-boot-starter-web:${dependencyVersions.spring_boot}"
    implementation "org.springframework.boot:spring-boot-starter-data-redis:${dependencyVersions.spring_boot}"
    implementation "org.springframework.boot:spring-boot-starter-cache:${dependencyVersions.spring_boot}"
    implementation "org.springframework.boot:spring-boot-starter-jersey:${dependencyVersions.spring_boot}"
    implementation "org.modelmapper:modelmapper:3.1.0"
    implementation "org.modelmapper.extensions:modelmapper-jackson:3.1.0"
    implementation "org.modelmapper.extensions:modelmapper-spring:3.1.0"
    implementation "commons-codec:commons-codec:1.15"
    implementation 'com.graphql-java:graphql-java-extended-scalars:19.1'
    implementation 'io.hypersistence:hypersistence-utils-hibernate-62:3.5.0'
    implementation project(":shared")

    runtimeOnly "io.micrometer:micrometer-registry-prometheus:${dependencyVersions.prometheus}"

    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
    testImplementation 'com.thedeanda:lorem:2.1'
    testImplementation "org.springframework.boot:spring-boot-starter-test:${dependencyVersions.spring_boot}"
    testImplementation "org.testcontainers:junit-jupiter"
    testImplementation 'org.assertj:assertj-core:3.23.1'
}

dependencyManagement {
    imports {
        mavenBom "org.testcontainers:testcontainers-bom:${dependencyVersions.testcontainers}"
    }
}

test {
    useJUnitPlatform()
}

bootJar {
    archiveFileName = "graphql.jar"
}

jacocoTestReport {
    reports {
        xml.required = true
    }
}

test.finalizedBy jacocoTestReport
